// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Utilization /> renders Loading utilization correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Utilization
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="kubevirt-utilization__time-duration kubevirt-utilization__time-duration--left"
        componentClass="div"
      >
        Time 
      </Col>
      <Col
        bsClass="col"
        className="kubevirt-utilization__time-duration kubevirt-utilization__time-duration--right"
        componentClass="div"
      >
        6 hour average
      </Col>
    </Row>
    <ChartAxis
      height={30}
      orientation="top"
      padding={
        Object {
          "bottom": 0,
          "left": 43,
          "right": 20,
          "top": 25,
        }
      }
      scale={
        Object {
          "x": "time",
        }
      }
      tickFormat={[Function]}
      tickValues={null}
    />
    <UtilizationBody>
      <UtilizationItem
        LoadingComponent={[Function]}
        data={null}
        decimalPoints={1}
        id="throughput"
        isLoading={true}
        maxY={0}
        title="Throughput"
        unit="B/s"
      />
      <UtilizationItem
        LoadingComponent={[Function]}
        data={null}
        decimalPoints={0}
        id="iops"
        isLoading={true}
        maxY={0}
        title="IOPS"
        unit="IOPS"
      />
      <UtilizationItem
        LoadingComponent={[Function]}
        data={null}
        decimalPoints={1}
        id="latency"
        isLoading={true}
        maxY={0}
        title="Latency"
        unit="ms"
      />
      <UtilizationItem
        LoadingComponent={[Function]}
        data={null}
        decimalPoints={1}
        id="recoveryRate"
        isLoading={true}
        maxY={0}
        title="Recovery rate"
        unit="B/s"
      />
    </UtilizationBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Utilization /> renders Utilization correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Utilization
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="kubevirt-utilization__time-duration kubevirt-utilization__time-duration--left"
        componentClass="div"
      >
        Time 
      </Col>
      <Col
        bsClass="col"
        className="kubevirt-utilization__time-duration kubevirt-utilization__time-duration--right"
        componentClass="div"
      >
        6 hour average
      </Col>
    </Row>
    <ChartAxis
      height={30}
      orientation="top"
      padding={
        Object {
          "bottom": 0,
          "left": 43,
          "right": 20,
          "top": 25,
        }
      }
      scale={
        Object {
          "x": "time",
        }
      }
      tickFormat={[Function]}
      tickValues={
        Array [
          1000000,
          1010000,
          1020000,
          1030000,
          1040000,
        ]
      }
    />
    <UtilizationBody>
      <UtilizationItem
        LoadingComponent={[Function]}
        data={
          Array [
            2,
            5,
            15,
            10,
            30,
          ]
        }
        decimalPoints={1}
        id="throughput"
        isLoading={false}
        maxY={30}
        title="Throughput"
        unit="Ki/s"
      />
      <UtilizationItem
        LoadingComponent={[Function]}
        data={
          Array [
            0,
            10,
            15,
            100,
            50,
          ]
        }
        decimalPoints={0}
        id="iops"
        isLoading={false}
        maxY={100}
        title="IOPS"
        unit="IOPS"
      />
      <UtilizationItem
        LoadingComponent={[Function]}
        data={
          Array [
            0,
            10,
            15,
            100,
            50,
          ]
        }
        decimalPoints={1}
        id="latency"
        isLoading={false}
        maxY={100}
        title="Latency"
        unit="ms"
      />
      <UtilizationItem
        LoadingComponent={[Function]}
        data={
          Array [
            2,
            5,
            15,
            10,
            30,
          ]
        }
        decimalPoints={1}
        id="recoveryRate"
        isLoading={false}
        maxY={30}
        title="Recovery rate"
        unit="Ki/s"
      />
    </UtilizationBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Utilization /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Utilization
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="row"
    >
      <div
        class="kubevirt-utilization__time-duration kubevirt-utilization__time-duration--left"
      >
        Time 
      </div>
      <div
        class="kubevirt-utilization__time-duration kubevirt-utilization__time-duration--right"
      >
        6 hour average
      </div>
    </div>
    <div
      class="VictoryContainer"
      style="height:100%;width:100%;pointer-events:none;touch-action:none;position:relative"
    >
      <svg
        aria-labelledby="victory-container-1-title victory-container-1-desc"
        height="30"
        role="img"
        style="pointer-events:all;width:100%;height:100%"
        viewBox="0 0 451 30"
        width="451"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
          vector-effect="non-scaling-stroke"
          x1="43"
          x2="431"
          y1="25"
          y2="25"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:none;fill:none;pointer-events:painted"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:transparent;fill:transparent;size:1px"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="24"
          />
          <text
            direction="inherit"
            dx="0"
            dy="-2.0300000000000002"
            x="43"
            y="14"
          >
            <tspan
              dx="0"
              style="font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;font-size:14px;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
              text-anchor="middle"
              x="43"
            >
              11:13
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:none;fill:none;pointer-events:painted"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:transparent;fill:transparent;size:1px"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="24"
          />
          <text
            direction="inherit"
            dx="0"
            dy="-2.0300000000000002"
            x="43"
            y="14"
          >
            <tspan
              dx="0"
              style="font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;font-size:14px;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
              text-anchor="middle"
              x="43"
            >
              11:13
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:none;fill:none;pointer-events:painted"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:transparent;fill:transparent;size:1px"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="24"
          />
          <text
            direction="inherit"
            dx="0"
            dy="-2.0300000000000002"
            x="43"
            y="14"
          >
            <tspan
              dx="0"
              style="font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;font-size:14px;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
              text-anchor="middle"
              x="43"
            >
              11:13
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:none;fill:none;pointer-events:painted"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:transparent;fill:transparent;size:1px"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="24"
          />
          <text
            direction="inherit"
            dx="0"
            dy="-2.0300000000000002"
            x="43"
            y="14"
          >
            <tspan
              dx="0"
              style="font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;font-size:14px;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
              text-anchor="middle"
              x="43"
            >
              11:13
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:none;fill:none;pointer-events:painted"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="30"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke:transparent;fill:transparent;size:1px"
            vector-effect="non-scaling-stroke"
            x1="43"
            x2="43"
            y1="25"
            y2="24"
          />
          <text
            direction="inherit"
            dx="0"
            dy="-2.0300000000000002"
            x="43"
            y="14"
          >
            <tspan
              dx="0"
              style="font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;font-size:14px;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
              text-anchor="middle"
              x="43"
            >
              11:13
            </tspan>
          </text>
        </g>
      </svg>
      <div
        style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
      >
        <svg
          height="30"
          style="overflow:visible;width:100%;height:100%"
          viewBox="0 0 451 30"
          width="451"
        />
      </div>
    </div>
    <div
      class="kubevirt-utilization__items"
    >
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            Throughput
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            30 Ki/s
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-chart kubevirt-utilization__item-chart--narrow"
          >
            <div
              class="VictoryContainer"
              style="height:100%;width:100%;user-select:none;pointer-events:none;touch-action:none;position:relative"
            >
              <svg
                aria-labelledby="victory-container-2-title victory-container-2-desc"
                height="60"
                role="img"
                style="pointer-events:all;width:100%;height:100%"
                viewBox="0 0 300 60"
                width="300"
              >
                <g
                  clip-path="url(#victory-clip-3)"
                  style="height:100%;width:100%;user-select:none"
                >
                  <defs>
                    <clipPath
                      id="victory-clip-3"
                    >
                      <rect
                        height="45"
                        role="presentation"
                        shape-rendering="auto"
                        vector-effect="non-scaling-stroke"
                        width="260"
                        x="40"
                        y="10"
                      />
                    </clipPath>
                  </defs>
                  <g>
                    <path
                      d="M40,52.640776699029125L105,49.101941747572816L170,37.30582524271844L235,43.20388349514563L300,19.61165048543689L300,55L235,55L170,55L105,55L40,55Z"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:#bee1f4;fill-opacity:0.4;stroke:none;stroke-width:2"
                    />
                    <path
                      d="M40,52.640776699029125L105,49.101941747572816L170,37.30582524271844L235,43.20388349514563L300,19.61165048543689"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:none;fill-opacity:0.4;stroke:#73bcf7;stroke-width:2"
                    />
                  </g>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="40"
                    y1="10"
                    y2="55"
                  />
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="55"
                      y2="55"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="55"
                      y2="55"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="55"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="37.30582524271844"
                      y2="37.30582524271844"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="37.30582524271844"
                      y2="37.30582524271844"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="37.30582524271844"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        15
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="19.61165048543689"
                      y2="19.61165048543689"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="19.61165048543689"
                      y2="19.61165048543689"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="19.61165048543689"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        30
                      </tspan>
                    </text>
                  </g>
                </g>
              </svg>
              <div
                style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
              >
                <svg
                  height="60"
                  style="overflow:visible;width:100%;height:100%"
                  viewBox="0 0 300 60"
                  width="300"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            IOPS
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            50 IOPS
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-chart kubevirt-utilization__item-chart--narrow"
          >
            <div
              class="VictoryContainer"
              style="height:100%;width:100%;user-select:none;pointer-events:none;touch-action:none;position:relative"
            >
              <svg
                aria-labelledby="victory-container-4-title victory-container-4-desc"
                height="60"
                role="img"
                style="pointer-events:all;width:100%;height:100%"
                viewBox="0 0 300 60"
                width="300"
              >
                <g
                  clip-path="url(#victory-clip-5)"
                  style="height:100%;width:100%;user-select:none"
                >
                  <defs>
                    <clipPath
                      id="victory-clip-5"
                    >
                      <rect
                        height="45"
                        role="presentation"
                        shape-rendering="auto"
                        vector-effect="non-scaling-stroke"
                        width="260"
                        x="40"
                        y="10"
                      />
                    </clipPath>
                  </defs>
                  <g>
                    <path
                      d="M40,55L105,51.46116504854369L170,49.69174757281554L235,19.611650485436897L300,37.30582524271845L300,55L235,55L170,55L105,55L40,55Z"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:#bee1f4;fill-opacity:0.4;stroke:none;stroke-width:2"
                    />
                    <path
                      d="M40,55L105,51.46116504854369L170,49.69174757281554L235,19.611650485436897L300,37.30582524271845"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:none;fill-opacity:0.4;stroke:#73bcf7;stroke-width:2"
                    />
                  </g>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="40"
                    y1="10"
                    y2="55"
                  />
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="55"
                      y2="55"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="55"
                      y2="55"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="55"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="37.30582524271845"
                      y2="37.30582524271845"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="37.30582524271845"
                      y2="37.30582524271845"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="37.30582524271845"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        50
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="19.611650485436897"
                      y2="19.611650485436897"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="19.611650485436897"
                      y2="19.611650485436897"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="19.611650485436897"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        100
                      </tspan>
                    </text>
                  </g>
                </g>
              </svg>
              <div
                style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
              >
                <svg
                  height="60"
                  style="overflow:visible;width:100%;height:100%"
                  viewBox="0 0 300 60"
                  width="300"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            Latency
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            50 ms
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-chart kubevirt-utilization__item-chart--narrow"
          >
            <div
              class="VictoryContainer"
              style="height:100%;width:100%;user-select:none;pointer-events:none;touch-action:none;position:relative"
            >
              <svg
                aria-labelledby="victory-container-6-title victory-container-6-desc"
                height="60"
                role="img"
                style="pointer-events:all;width:100%;height:100%"
                viewBox="0 0 300 60"
                width="300"
              >
                <g
                  clip-path="url(#victory-clip-7)"
                  style="height:100%;width:100%;user-select:none"
                >
                  <defs>
                    <clipPath
                      id="victory-clip-7"
                    >
                      <rect
                        height="45"
                        role="presentation"
                        shape-rendering="auto"
                        vector-effect="non-scaling-stroke"
                        width="260"
                        x="40"
                        y="10"
                      />
                    </clipPath>
                  </defs>
                  <g>
                    <path
                      d="M40,55L105,51.46116504854369L170,49.69174757281554L235,19.611650485436897L300,37.30582524271845L300,55L235,55L170,55L105,55L40,55Z"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:#bee1f4;fill-opacity:0.4;stroke:none;stroke-width:2"
                    />
                    <path
                      d="M40,55L105,51.46116504854369L170,49.69174757281554L235,19.611650485436897L300,37.30582524271845"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:none;fill-opacity:0.4;stroke:#73bcf7;stroke-width:2"
                    />
                  </g>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="40"
                    y1="10"
                    y2="55"
                  />
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="55"
                      y2="55"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="55"
                      y2="55"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="55"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="37.30582524271845"
                      y2="37.30582524271845"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="37.30582524271845"
                      y2="37.30582524271845"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="37.30582524271845"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        50
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="19.611650485436897"
                      y2="19.611650485436897"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="19.611650485436897"
                      y2="19.611650485436897"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="19.611650485436897"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        100
                      </tspan>
                    </text>
                  </g>
                </g>
              </svg>
              <div
                style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
              >
                <svg
                  height="60"
                  style="overflow:visible;width:100%;height:100%"
                  viewBox="0 0 300 60"
                  width="300"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            Recovery rate
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            30 Ki/s
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-chart kubevirt-utilization__item-chart--narrow"
          >
            <div
              class="VictoryContainer"
              style="height:100%;width:100%;user-select:none;pointer-events:none;touch-action:none;position:relative"
            >
              <svg
                aria-labelledby="victory-container-8-title victory-container-8-desc"
                height="60"
                role="img"
                style="pointer-events:all;width:100%;height:100%"
                viewBox="0 0 300 60"
                width="300"
              >
                <g
                  clip-path="url(#victory-clip-9)"
                  style="height:100%;width:100%;user-select:none"
                >
                  <defs>
                    <clipPath
                      id="victory-clip-9"
                    >
                      <rect
                        height="45"
                        role="presentation"
                        shape-rendering="auto"
                        vector-effect="non-scaling-stroke"
                        width="260"
                        x="40"
                        y="10"
                      />
                    </clipPath>
                  </defs>
                  <g>
                    <path
                      d="M40,52.640776699029125L105,49.101941747572816L170,37.30582524271844L235,43.20388349514563L300,19.61165048543689L300,55L235,55L170,55L105,55L40,55Z"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:#bee1f4;fill-opacity:0.4;stroke:none;stroke-width:2"
                    />
                    <path
                      d="M40,52.640776699029125L105,49.101941747572816L170,37.30582524271844L235,43.20388349514563L300,19.61165048543689"
                      role="presentation"
                      shape-rendering="auto"
                      style="fill:none;fill-opacity:0.4;stroke:#73bcf7;stroke-width:2"
                    />
                  </g>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="40"
                    y1="10"
                    y2="55"
                  />
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="55"
                      y2="55"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="55"
                      y2="55"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="55"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="37.30582524271844"
                      y2="37.30582524271844"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="37.30582524271844"
                      y2="37.30582524271844"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="37.30582524271844"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        15
                      </tspan>
                    </text>
                  </g>
                  <g
                    role="presentation"
                  >
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:none;fill:none;pointer-events:painted"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="300"
                      y1="19.61165048543689"
                      y2="19.61165048543689"
                    />
                    <line
                      role="presentation"
                      shape-rendering="auto"
                      style="stroke:transparent;fill:transparent;size:1px"
                      vector-effect="non-scaling-stroke"
                      x1="40"
                      x2="39"
                      y1="19.61165048543689"
                      y2="19.61165048543689"
                    />
                    <text
                      direction="inherit"
                      dx="0"
                      dy="3.55"
                      x="29"
                      y="19.61165048543689"
                    >
                      <tspan
                        dx="0"
                        style="font-size:10px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;padding:10px;fill:#151515;stroke:transparent"
                        text-anchor="end"
                        x="29"
                      >
                        30
                      </tspan>
                    </text>
                  </g>
                </g>
              </svg>
              <div
                style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
              >
                <svg
                  height="60"
                  style="overflow:visible;width:100%;height:100%"
                  viewBox="0 0 300 60"
                  width="300"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
